--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
+    "vercel": "^34.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
